--- a/src/index.pug
+++ b/src/index.pug
@@ -2,78 +2,78 @@ extends ./main.layout.pug
 
 block content
 
-  //- .welcome-section
-  //-   section.hero
-  //-     .container.hero__container
-  //-       header.header
-  //-         a.logo(href="#") ВА
-  //-         nav.menu
-  //-           - var menuItems = ["Обо мне", "Навыки", "Работы", "Отзывы"]
-  //-           ul.menu__list
-  //-             each item in menuItems
-  //-               li.menu__item 
-  //-                 a(href="#").menu__link #{item}
-  //-           - var socials = ["insta", "vk", "github", "envelope"]
-  //-         ul.social__list
-  //-           each item in socials
-  //-             li.social__item
-  //-               a(href="#").social__link
-  //-                 +icon(item, "social__icon")
-  //-       .userinfo 
-  //-         .userinfo__title Личный сайт #[br] веб разработчика 
-  //-         .userinfo__name Владимир Астаханов
-  //-       .hero__button-buttons
-  //-         button.scroll-down-btn Скролл
-  //-   section.about
-  //-     .container.about-container
-  //-       .about__user
-  //-         .user
-  //-           .user__avatat
-  //-             .user__avaatar-style
-  //-               +image("content/user.jpg", 'user__avatar-pic')
-  //-               - 
-  //-                 var userInfo = [
-  //-                   ["Проживаю", "Новосибирск"],
-  //-                   ["Возраст", "27 лет"],
-  //-                   ["Родился", "1 января 1991"],
-  //-                 ];
-  //-           table.user__data
-  //-             each item in userInfo
-  //-               tr.user__data-row
-  //-                 td.user__data-title #{item[0]}
-  //-                 td.user__data-content #{item[1]}
-  //-       .about__content  
-  //-         .about__desc  Привет, меня зовут
-  //-         .about__title Владимир Астаханов
-  //-         .about__text-info 
-  //-           p   Я занимаюсь разработкой современных сайтов и приложений. Мне нравится делать интересные и современные проекты.
-  //-         .about__ps Этот сайт я сделал в рамках обучения в Школе онлайн образования LoftSchool. Чуть позже я освежу в нём свой контент. А пока посмотрите, как тут всё классно и красиво!
-  //- .middle-section
-  //-     section.values
-  //-       .container  
-  //-         .values__title  
-  //-           .values__title-text Чем я могу быть полезен вам
-  //-           .values__title-content 
-  //-             p Этот сайт я сделал в рамках обучения в Школе онлайн образования LoftSchool. Чуть позже я освежу в нём свой контент. А пока посмотрите, как тут всё классно и красиво!
-  //-         .values__widget             
-  //-           - 
-  //-             var skillsCategories = [
-  //-                 ["Frontend", ["HTML5", "CSS3", "Javascript", "Vue.js"]],
-  //-                 ["Workflow", ["GIT", "Terminal", "Gulp", "Webpack"]]
-  //-               ];
-  //-           ul.skills
-  //-             each category in skillsCategories
-  //-               li.skills__item 
-  //-                 .skills-row
-  //-                     .skills-row__title #{category[0]}
-  //-                     ul.skills-row__list
-  //-                       each skill in category[1]
-  //-                         li.skill-row__item
-  //-                           .skill 
-  //-                             svg(viewBox="0 0 100 100").skill__circle-shape
-  //-                               circle(cx="50" cy="50" r="40").skill__circle.skill__circle--layer--under
-  //-                               circle(cx="50" cy="50" r="40" stroke="url(#gradient)" transform='rotate(180 50 50)').skill__circle.skill__circle_above
-  //-                               linearGradient(id="gradient" x1="0%" y1="0%" x2="100%" y2="0")
-  //-                                 stop(offset="0%" stop-color="#5500f2")
-  //-                                 stop(offset="100%" stop-color="#8f00ef")
-  //-                             .skill__title #{skill}
+  .welcome-section
+    section.hero
+      .container.hero__container
+        header.header
+          a.logo(href="#") ВА
+          nav.menu
+            - var menuItems = ["Обо мне", "Навыки", "Работы", "Отзывы"]
+            ul.menu__list
+              each item in menuItems
+                li.menu__item 
+                  a(href="#").menu__link #{item}
+            - var socials = ["insta", "vk", "github", "envelope"]
+          ul.social__list
+            each item in socials
+              li.social__item
+                a(href="#").social__link
+                  +icon(item, "social__icon")
+        .userinfo 
+          .userinfo__title Личный сайт #[br] веб разработчика 
+          .userinfo__name Владимир Астаханов
+        .hero__button-buttons
+          button.scroll-down-btn Скролл
+    section.about
+      .container.about-container
+        .about__user
+          .user
+            .user__avatat
+              .user__avaatar-style
+                +image("content/user.jpg", 'user__avatar-pic')
+                - 
+                  var userInfo = [
+                    ["Проживаю", "Новосибирск"],
+                    ["Возраст", "27 лет"],
+                    ["Родился", "1 января 1991"],
+                  ];
+            table.user__data
+              each item in userInfo
+                tr.user__data-row
+                  td.user__data-title #{item[0]}
+                  td.user__data-content #{item[1]}
+        .about__content  
+          .about__desc  Привет, меня зовут
+          .about__title Владимир Астаханов
+          .about__text-info 
+            p   Я занимаюсь разработкой современных сайтов и приложений. Мне нравится делать интересные и современные проекты.
+          .about__ps Этот сайт я сделал в рамках обучения в Школе онлайн образования LoftSchool. Чуть позже я освежу в нём свой контент. А пока посмотрите, как тут всё классно и красиво!
+  .middle-section
+      section.values
+        .container  
+          .values__title  
+            .values__title-text Чем я могу быть полезен вам
+            .values__title-content 
+              p Этот сайт я сделал в рамках обучения в Школе онлайн образования LoftSchool. Чуть позже я освежу в нём свой контент. А пока посмотрите, как тут всё классно и красиво!
+          .values__widget             
+            - 
+              var skillsCategories = [
+                  ["Frontend", ["HTML5", "CSS3", "Javascript", "Vue.js"]],
+                  ["Workflow", ["GIT", "Terminal", "Gulp", "Webpack"]]
+                ];
+            ul.skills
+              each category in skillsCategories
+                li.skills__item 
+                  .skills-row
+                      .skills-row__title #{category[0]}
+                      ul.skills-row__list
+                        each skill in category[1]
+                          li.skill-row__item
+                            .skill 
+                              svg(viewBox="0 0 100 100").skill__circle-shape
+                                circle(cx="50" cy="50" r="40").skill__circle.skill__circle--layer--under
+                                circle(cx="50" cy="50" r="40" stroke="url(#gradient)" transform='rotate(180 50 50)').skill__circle.skill__circle_above
+                                linearGradient(id="gradient" x1="0%" y1="0%" x2="100%" y2="0")
+                                  stop(offset="0%" stop-color="#5500f2")
+                                  stop(offset="100%" stop-color="#8f00ef")
+                              .skill__title #{skill}
