--- a/src/styles/blocks/about.pcss
+++ b/src/styles/blocks/about.pcss
@@ -1,29 +1,35 @@
 .about-container {
-    display: flex;
+  display: flex;
+  display: flex;
+justify-content: space-between;
+padding: 0px 14%;
 
 }
 
 .about__content {
-    flex: 1;
+  width: 56%
 }
 
 .about__user {
-    width: 36%;    
-  }
-  
-  .about__desc {
-    font-weight: 600;
-    margin-bottom: 20px;
-  }
-  
-  .about__title {
-    font-weight: 700;
-    font-size: 36px;
-    margin-bottom: 30px;
-    color: $text-color;
-  }
-  
-  .about__ps {
-    font-style: italic;
-    margin-bottom: 36px;
-  }
+  width: 36%;    
+}
+
+.about__desc {
+  font-weight: 600;
+  margin-bottom: 20px;
+}
+
+.about__title {
+  font-weight: 700;
+  font-size: 36px;
+  margin-bottom: 30px;
+  color: $text-color;
+}
+.about__text-info {
+  margin-bottom: 102px;
+}
+.about__ps {
+  font-style: italic;
+  margin-bottom: 36px;
+  line-height: 1.8;
+}
