--- a/src/styles/blocks/user.pcss
+++ b/src/styles/blocks/user.pcss
@@ -1,32 +1,35 @@
-.usr {
+.user {
   display: flex;
-flex-direction: column;
-align-items: center;
+  flex-direction: column;
+  align-items: center;
+}
+.user__avatar {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 70px;
+}
+.user__avatar-style {
+  width: 200px;
+  height: 200px;
+  overflow: hidden;
+  border-radius: 50%;
+  margin: 0 70px;
 }
 
-.user__avatat {
-     width: 200px;
-height: 200px;
-overflow: hidden;
-border-radius: 50%;
-margin: 0 70px;
-flex-shrink: 0;
- }
 
-   
-   .user__table {
-     font-weight: 600;
-     width: 100%;
-   
-     td {
-       padding-bottom: 15px;
-     }
-   
-     tr:last-child td {
-       padding-bottom: 0;
-     }
-   }
-   
-   .user__table-title {
-     color: rgba($text-color, .3);
-   }
+.user__data {
+  font-weight: 600;
+  width: 100%;
+
+  td {
+    padding-bottom: 15px;
+  }
+
+  tr:last-child td {
+    padding-bottom: 0;
+  }
+}
+
+.user__data-title {
+  color: rgba($text-color, .3);
+}
