--- a/src/styles/blocks/userinfo.pcss
+++ b/src/styles/blocks/userinfo.pcss
@@ -1,5 +1,7 @@
 .userinfo {
     display: flex;
+    flex-direction: column;
+    align-items: center;
     justify-content: center;
 }
 
@@ -8,14 +10,12 @@
     color: rgba($text-color, .4);
     font-weight: 600;
     margin-bottom: 20px;
-    text-align: right;
-    margin-right: 60px;
-    padding-top: 5px;
+    /* line-height: 1; */
+    text-align: center;
 }
 
 .userinfo__name {
     font-weight: 800;
      font-size: 72px;
      line-height: 1;
-     flex-basis: 400px;
 }
