верстка первая неделя

--- a/src/styles/blocks/triangles.pcss
+++ b/src/styles/blocks/triangles.pcss
@@ -22,5 +22,5 @@ height: 100%;
     position: absolute;
     top: 100%;
     width: 100%;
-    transform: rotate(180deg);
+    // margin-bottom: 230px;
 }
