--- a/src/index.pug
+++ b/src/index.pug
@@ -48,16 +48,16 @@ block content
           .about__text-info 
             p   Я занимаюсь разработкой современных сайтов и приложений. Мне нравится делать интересные и современные проекты.
           .about__ps Этот сайт я сделал в рамках обучения в Школе онлайн образования LoftSchool. Чуть позже я освежу в нём свой контент. А пока посмотрите, как тут всё классно и красиво!
-  .middle-section
 
+  .middle-section
 
     .triangles.triangles_top
       svg(viewBox="0 0 1000 100" preserveAspectRatio="none").triangles__shape.triangles__shape_left
         polygon(points="0,0 0,100 1000,100")
       svg(viewBox="0 0 1000 100" preserveAspectRatio="none").triangles__shape.triangles__shape_right
         polygon(points="0,100 1000,100 1000,0")
-      
-    section.values
+
+    section.values    
       .container  
         .values__wrapper
           .values__title  
@@ -86,8 +86,101 @@ block content
                                 stop(offset="0%" stop-color="#5500f2")
                                 stop(offset="100%" stop-color="#8f00ef")
                             .skill__title #{skill}
+    section.works
+      .container
+        .section-title Мои работы
+        .works__content
+          .works__preview(data-slide="1")
+            .works__preview-pic
+              +image("content/slider-1.jpg", "works__preview-img")
+              .works__preview-tumbs
+                ul.thumbs
+                  - for (var i = 3; i > 0; i--)
+                    li.thumbs__item
+                      a(href="#").thumbs__link
+                        +image(`content/slider-${i}.jpg`, 'thumb__img')
+              .works__privew-btns
+                .square-btns
+                  button(type="button").square-btn__item.square-btn__item--next
+                  button(type="button").square-btn__item.square-btn__item--prev
+            .works__preview-info 
+              - var tags = ["HTML", "CSS", "JavaScript"];
+                ul.tags
+                  each item in tags
+                    li.tags__item
+                      .tag #{item}
+                .works__preview-title Сайт школы образования 
+                .works__preview-desc 
+                  p Этот парень проходил обучение веб-разработке не где-то, а в LoftSchool! 2 месяца только самых тяжелых испытаний и бессонных ночей!
+                a(href="").iconed-link  Посмотреть сайт
+
+
     .triangles.triangles__bottom
       svg(viewBox="0 0 1000 100" preserveAspectRatio="none").triangles__shape.triangles__shape_left
-        polygon(points="0,0 0,100 1000,100")
+        polygon(points="0,0 1000,0 1000,100")
       svg(viewBox="0 0 1000 100" preserveAspectRatio="none").triangles__shape.triangles__shape_right
-        polygon(points="0,100 1000,100 1000,0")
+        polygon(points="0,0 0,100 1000,0")
+
+  .section.reviwes    
+    .container
+      .slider
+        .slider__header
+          .section-title Что обо мне говорят
+          .slider__buttons  
+            button(type="button").round-btn.round-btn--right
+            button(type="button").round-btn.round-btn--left
+        ul.slider__content  
+          li.slider__item
+            .quote  
+              .quote__text  
+                p Этот парень проходил обучение веб-разработке не где-то, а в LoftSchool! 4,5 месяца только самых тяжелых испытаний и бессонных ночей!
+              .quote__user 
+                .user-display 
+                  .user-display__avatar
+                    .user-display__avatar-style
+                      +image("content/user.jpg", "use-display__pic")
+                    .user-display__name
+                      .user-desplay__name Дмитрий Ковальчук
+                      .user-display__occ Основатель Loftschool  
+          li.slider__item
+            .quote  
+              .quote__text  
+                p Этот парень проходил обучение веб-разработке не где-то, а в LoftSchool! 4,5 месяца только самых тяжелых испытаний и бессонных ночей!
+              .quote__user 
+                .user-display 
+                  .user-display__avatar
+                    .user-display__avatar-style
+                      +image("content/user.jpg", "use-display__pic")
+                    .user-display__name
+                      .user-desplay__name Дмитрий Ковальчук
+                      .user-display__occ Основатель Loftschool
+  footer.footer
+    .container.footer-container
+      .footer__copyright
+        .footer__copyright-col &copy; 2019
+        .footer__copyright-author
+          .footer__copyright-author-name Владимир #[br] Астахов
+          .footer__copyright-author-info Личный сайт #[br] веб-разработчика
+      .footer__data
+        nav.menu
+            - var menuItems = ["Обо мне", "Навыки", "Работы", "Отзывы"]
+            ul.menu__list
+              each item in menuItems
+                li.menu__item 
+                  a(href="#").menu__link #{item}
+        .footer__data-content
+          .footer__data-content-col
+            .footer__data-content-about Этот сайт я сделал в рамках обучения в Школе онлайн образования Loftschool
+            - var socials = ["insta", "vk", "github", "envelope"]
+            ul.social__list
+              each item in socials
+                li.social__item.footer-social
+                  a(href="#").social__link
+                    +icon(item, "social__icon")
+          .footer__data-content-col
+            .footer__quote
+              .footer__qote-text Всегда пишите код так, будто сопровождать его будет склонный к насилию психопат, который знает где вы живете
+              .footer__qote-autor Martin Golding
+
+                      
+
