--- a/src/styles/blocks/menu.pcss
+++ b/src/styles/blocks/menu.pcss
@@ -4,10 +4,12 @@
 }
 
 .menu__list {
-    text-decoration: none;
     white-space: nowrap;
 }
+.menu__link {
+    text-decoration: none;
 
+}
 .menu__item {
     margin-right: 60px;
 
