--- a/src/styles/layout/base.pcss
+++ b/src/styles/layout/base.pcss
@@ -74,7 +74,7 @@ p {
 
 button[type="button"] {
   cursor: pointer;
-  background-color: transparent;
+  // background-color: transparent;
 }
 
 a {
