--- a/src/styles/blocks/menu.pcss
+++ b/src/styles/blocks/menu.pcss
@@ -1,3 +1,8 @@
+    .menu {
+        margin-bottom: -30px;
+    }
+
+
 .menu__list {
     display: flex;
     justify-content: center;
@@ -11,7 +16,8 @@
 
 }
 .menu__item {
-    margin-right: 60px;
+    margin-right: 60px;    
+    margin-bottom: 30px;
 
     &:last-child {
         margin-right: 0;
