--- a/src/styles/layout/base.pcss
+++ b/src/styles/layout/base.pcss
@@ -28,9 +28,9 @@ body {
 
 .container {
   margin: 0 auto;
-  //max-width: 1480px;
-  //width: 95%;
-   width: 1480px;
+  max-width: 1480px;
+  width: 94%;
+  //  width: 1480px;
 
   @include phones {
     width: 85%;
