--- a/src/index.pug
+++ b/src/index.pug
@@ -6,22 +6,29 @@ block content
     section.hero
       .container.hero__container
         header.header
-          a.logo(href="#") ВА
-          nav.menu
-            - var menuItems = ["Обо мне", "Навыки", "Работы", "Отзывы"]
-            ul.menu__list
-              each item in menuItems
-                li.menu__item 
-                  a(href="#").menu__link #{item}
-            - var socials = ["insta", "vk", "github", "envelope"]
-          ul.social__list
-            each item in socials
-              li.social__item
-                a(href="#").social__link
-                  +icon(item, "social__icon")
+          a.logo(href="#") АЗ
+          .header__menu
+            nav.menu
+              - var menuItems = ["Обо мне", "Навыки", "Работы", "Отзывы"]
+              ul.menu__list
+                each item in menuItems
+                  li.menu__item 
+                    a(href="#").menu__link #{item}
+              - var socials = ["insta", "vk", "github", "envelope"]
+          .header__socials
+            ul.social__list
+              each item in socials
+                li.social__item
+                  a(href="#").social__link
+                    +icon(item, "social__icon")
+          .hamburger-container
+            #hamburger.hamburger
+              span.hamburher__plank
+              span.hamburher__plank
+              span.hamburher__plank
         .userinfo 
           .userinfo__title Личный сайт #[br] веб разработчика 
-          .userinfo__name Владимир #[br]  Астаханов
+          .userinfo__name Алексей #[br]  Захаров
         .hero__button-buttons
           button.scroll-down-btn Скролл
     section.about
@@ -44,7 +51,7 @@ block content
                   td.user__data-content #{item[1]}
         .about__content  
           .about__desc  Привет, меня зовут
-          .about__title Владимир Астаханов
+          .about__title Алексей Захаров
           .about__text-info 
             p   Я занимаюсь разработкой современных сайтов и приложений. Мне нравится делать интересные и современные проекты.
           .about__ps Этот сайт я сделал в рамках обучения в Школе онлайн образования LoftSchool. Чуть позже я освежу в нём свой контент. А пока посмотрите, как тут всё классно и красиво!
@@ -86,8 +93,10 @@ block content
                                 stop(offset="0%" stop-color="#5500f2")
                                 stop(offset="100%" stop-color="#8f00ef")
                             .skill__title #{skill}
+          .values__img
+            +image("decor/bag.jpg", 'values__img-pic')
     section.works
-      .container
+      .container.works-containder
         .section-title Мои работы
         .works__content
           .works__preview(data-slide="1")
@@ -142,41 +151,42 @@ block content
                     .user-display__name
                       .user-desplay__name Дмитрий Ковальчук
                       .user-display__occ Основатель Loftschool  
-          li.slider__item
-            .quote  
-              .quote__text  
-                p Этот парень проходил обучение веб-разработке не где-то, а в LoftSchool! 4,5 месяца только самых тяжелых испытаний и бессонных ночей!
-              .quote__user 
-                .user-display 
-                  .user-display__avatar
-                    .user-display__avatar-style
-                      +image("content/user.jpg", "use-display__pic")
-                    .user-display__name
-                      .user-desplay__name Дмитрий Ковальчук
-                      .user-display__occ Основатель Loftschool
+          //- li.slider__item
+          //-   .quote  
+          //-     .quote__text  
+          //-       p Этот парень проходил обучение веб-разработке не где-то, а в LoftSchool! 4,5 месяца только самых тяжелых испытаний и бессонных ночей!
+          //-     .quote__user 
+          //-       .user-display 
+          //-         .user-display__avatar
+          //-           .user-display__avatar-style
+          //-             +image("content/user.jpg", "use-display__pic")
+          //-           .user-display__name
+          //-             .user-desplay__name Дмитрий Ковальчук
+          //-             .user-display__occ Основатель Loftschool
   footer.footer
     .container.footer-container
       .footer__copyright
-        .footer__copyright-col &copy; 2019
+        .footer__copyright-col &copy; 2020
         .footer__copyright-author
-          .footer__copyright-author-name Владимир #[br] Астахов
-          .footer__copyright-author-info Личный сайт #[br] веб-разработчика
+          .footer__copyright-author-name Алексей Захаров
+          .footer__copyright-author-info Личный сайт  веб-разработчика
       .footer__data
-        nav.menu
+        .menu.footer-menu
             - var menuItems = ["Обо мне", "Навыки", "Работы", "Отзывы"]
             ul.menu__list
               each item in menuItems
-                li.menu__item 
+                li.menu__item.footer-menu__item
                   a(href="#").menu__link #{item}
         .footer__data-content
-          .footer__data-content-col
+          .footer__data-content-col.footer__data-content-col--thin
             .footer__data-content-about Этот сайт я сделал в рамках обучения в Школе онлайн образования Loftschool
             - var socials = ["insta", "vk", "github", "envelope"]
-            ul.social__list
-              each item in socials
-                li.social__item.footer-social
-                  a(href="#").social__link
-                    +icon(item, "social__icon")
+            .footer__data-social
+              ul.social__list
+                each item in socials
+                  li.social__item.footer-social.social__item--rounded
+                    a(href="#").social__link.footer-link
+                      +icon(item, "social__icon")
           .footer__data-content-col
             .footer__quote
               .footer__qote-text Всегда пишите код так, будто сопровождать его будет склонный к насилию психопат, который знает где вы живете
