--- a/src/styles/blocks/header.pcss
+++ b/src/styles/blocks/header.pcss
@@ -2,4 +2,32 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+
+    @include tablets {
+        margin-bottom: 23%;
+    }
+
+    @include phones {
+        margin-bottom: 132px;
+    }
+
+    &__menu {
+        @include tablets {
+            display: none;
+        }
+    }
+
+    &__socials {
+
+        display: flex;
+
+        @include tablets {
+            flex: 3;
+            justify-content: end;
+        }
+
+        @include phones {
+            display: none;
+        }
+    }
 }
