--- a/src/styles/blocks/section-title.pcss
+++ b/src/styles/blocks/section-title.pcss
@@ -2,4 +2,14 @@
     margin-bottom: 85px;
     font-weight: bold;
     font-size: 36px;
+
+    @include tablets {
+      margin-bottom: 60px;
+    }
+
+    @include phones {
+      font-size: 26px;
+      text-align: center;
+      margin-bottom:  28px;
+    }
   }
