--- a/src/styles/blocks/social.pcss
+++ b/src/styles/blocks/social.pcss
@@ -1,9 +1,5 @@
-.socials {
-    display: flex;
-
-}
 .social__list {
-    display: flex
+    display: flex;
 }
 
 .social__item {
@@ -16,3 +12,12 @@
         margin-right: 0;
     }
 }
+
+.social__item--rounded {
+    width: 54px;
+    height: 54px;
+    border: 1px solid #ffffff30;
+    border-radius: 50px;
+}
+
+
