--- a/src/styles/blocks/triangles.pcss
+++ b/src/styles/blocks/triangles.pcss
@@ -15,6 +15,10 @@ height: 100%;
     position: absolute;
     bottom: 100%;
     width: 100%;
+    
+    @include phones {
+        height: 20px;
+    }
 }
 
 .triangles__bottom {
@@ -22,5 +26,8 @@ height: 100%;
     position: absolute;
     top: 100%;
     width: 100%;
-    // margin-bottom: 230px;
+
+    @include phones {
+        height: 20px;
+    }
 }
