--- a/src/styles/blocks/value.pcss
+++ b/src/styles/blocks/value.pcss
@@ -1,6 +1,19 @@
-.values  {
-  margin-bottom: 160px;
+.values {
+  margin-bottom: 120px;
+
+  @include desktop {
+    margin-bottom: 256px;
+  }
+
+  @include tablets {
+    margin-bottom: 75px;
+  }
+
+  @include phones {
+    margin-bottom:  34px;
+  }
 }
+
 .values__wrapper {
   width: 66%;
   display: flex;
@@ -8,12 +21,30 @@
   margin-left: auto;
   position: relative;
 
-  &::before {
+  &:before {
     content: url(~images/decor/bag.jpg);
     position: absolute;
     top: 16%;
     left: -66%;
     z-index: -5;
+
+    @include tablets {
+      content: "";
+    }
+  }
+
+  @include desktop {
+    width: 75%;
+  }
+
+  @include tablets {
+    width: 100%;
+    text-align: center;
+    line-height: 1.2;
+  }
+
+  @include phones {
+    text-align: left;
   }
 
 }
@@ -21,16 +52,75 @@
 .values__title {
   width: 61%;
   margin-bottom: 80px;
+
+  @include desktop {
+    width: 67%;
+    margin-bottom: 108px;
+  }
+
+  @include tablets {
+    width: 57%;
+    align-self: center;
+    margin-bottom: 24px;
+  }
+
+  @include phones {
+    width: 100%;
+    margin-bottom: 76px;
+  }
+
 }
 
 .values__title-text {
   font-size: 30px;
   font-weight: 700;
   margin-bottom: 55px;
+
+  @include desktop {
+    margin-bottom: 42px;
+  }
+
+  @include tablets {
+    font-size: 36px;
+
+    margin-bottom: 24px;
+  }
+  @include phones {
+    font-size: 26px;
+    line-height: 1.6;
+    margin-bottom: 30px;
+  }
 }
 
 .values__title-content {
   color: rgba($text-color, .5);
   font-weight: 600;
   line-height: 1.8;
+}
+.values__widget {
+  margin-bottom: 120px;
+
+  @include phones {
+    margin-bottom: 42px;
+  }
+}
+
+.values__img {
+  display: none;
+
+  @include tablets {
+    display: block;
+    height: 320px;
+    width: 248px;
+    overflow: hidden;
+    align-self: center;
+
+    &-pic {
+      display: block;
+      object-fit: cover;
+      width: 100%;
+      height: 100%;
+    }
+
+  }
 }
