--- a/src/index.pug
+++ b/src/index.pug
@@ -90,25 +90,7 @@ block content
 
   .section.reviwes    
     .container
-      .slider
-        .slider__header
-          .section-title Что обо мне говорят
-          .slider__buttons  
-            button(type="button").round-btn.round-btn--right
-            button(type="button").round-btn.round-btn--left
-        ul.slider__content  
-          li.slider__item
-            .quote  
-              .quote__text  
-                p Этот парень проходил обучение веб-разработке не где-то, а в LoftSchool! 4,5 месяца только самых тяжелых испытаний и бессонных ночей!
-              .quote__user 
-                .user-display 
-                  .user-display__avatar
-                    .user-display__avatar-style
-                      +image("content/user.jpg", "use-display__pic")
-                    .user-display__name
-                      .user-desplay__name Дмитрий Ковальчук
-                      .user-display__occ Основатель Loftschool  
+        #slider-component
   footer.footer
     .container.footer-container
       .footer__copyright
